--- a/website/static/profile/css/main.css
+++ b/website/static/profile/css/main.css
@@ -1,3 +1,9 @@
 .search.visible.results {
     position: initial;
 }
+
+@media only screen and (max-width: 767px) {
+    .ui.stackable.cards>.card {
+        width: 100% !important;
+    }
+}
