--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -42,6 +42,9 @@
 
     <link rel="icon" href="{% static 'img/favicon.png' %}">
 
+    <link rel="manifest" href="{% static 'pwa/manifest.json' %}">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     {% block head %}
     {% endblock %}
 
