[website][profile] Add 'load more' button for post feed

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -37,7 +37,7 @@
 
 {% block js %}
 
-    <script type="text/javascript" src="{% static 'posts/js/posts_list.js' %}"></script>
+    <script type="text/javascript" src="{% static 'components/post_feed.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/profile.js' %}"></script>
 
