--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -37,6 +37,7 @@
 
 {% block js %}
 
+    <script type="text/javascript" src="{% static 'components/subject_feed.js' %}"></script>
     <script type="text/javascript" src="{% static 'components/post_feed.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/profile.js' %}"></script>
