[profile] Refactoring; Add total numbers of items to headers

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -41,5 +41,12 @@
     <script type="text/javascript" src="{% static 'components/post_feed.js' %}"></script>
     <script type="text/javascript" src="{% static 'departments/js/hierarchy.js' %}"></script>
     <script type="text/javascript" src="{% static 'profile/js/profile.js' %}"></script>
+    
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function () {
+            let page = new ProfilePage();
+        });
+    </script>
+    
 
 {% endblock %}
