[website] Fix avatars and comments

--- a/website/static/posts/css/post.css
+++ b/website/static/posts/css/post.css
@@ -113,4 +113,5 @@ article.post .btn-follow-link, article.post .btn-download {
 
 .comments-counter {
     text-decoration: none !important;
+    color: rgb(179, 179, 179);
 }
