--- a/website/static/css/menu.css
+++ b/website/static/css/menu.css
@@ -23,7 +23,7 @@ nav.sidebar, .main {
     padding: 7px;
 }
 
-.avatar {
+.nav .avatar {
     padding: 5px;
     margin: auto;
 
@@ -32,7 +32,11 @@ nav.sidebar, .main {
 
     background-size: cover;
     background-position: top center;
+}
 
+.avatar {
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
     border-radius: 50% !important;
 }
 
