--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -22,7 +22,7 @@
         <div class="no-margin-padding column">
             {% include 'search.html' %}
             <div id="modal"></div>
-            <div class="ui basic segment" style="min-height: 100px; margin-top: 0;">
+            <div class="ui basic segment" style="min-height: 100px; margin-top: 0; text-align: center">
                 <div id="posts_container"></div>
                 <div class="ui basic button" id="load_more_btn" onclick="load_posts_list()">
                     load more...
