--- a/website/static/chats/css/main.css
+++ b/website/static/chats/css/main.css
@@ -70,7 +70,11 @@
     position: absolute;
     width: 100%;
     max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
     padding: 14px;
+    text-align: center;
+    bottom: 0;
 }
 
 .back_chat.button {
