[posts] Implement new posts editor with EditorJS

--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
     {% include 'tags/yandex_webmaster.html' %}
     {% include 'tags/google_analytics.html' %}
