Refactor cloud and post pages

--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -17,37 +17,16 @@
 
 
 {% block content %}
-
-    <div class="ui padded grid">
-        <div class="no-margin-padding column">
-            {% include 'search.html' %}
-            <div id="modal"></div>
-            <div class="ui basic segment" style="min-height: 100px; margin-top: 0; text-align: center">
-                <div id="posts_container"></div>
-                <div class="ui basic button" id="load_more_btn" onclick="load_posts_list()">
-                    load more...
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <div id="cloud_container"></div>
 {% endblock %}
 
 
 {% block js %}
 
-    <!--  Multi select input -->
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/dropdown.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/search.min.js"
-            integrity="sha256-gkqnhj5TvM/vwvHKAb4zBC7uL6mndcAlK6CEv5iEUwg=" crossorigin="anonymous"></script>
-
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-
-    <script type="text/javascript" src="{% static 'posts/js/post.js' %}"></script>
-    <script type="text/javascript" src="{% static 'cloud/js/search.js' %}"></script>
-    <script type="text/javascript" src="{% static 'cloud/js/main.js' %}"></script>
+    <script type="module">
+        import {CloudPage} from "../static/cloud/js/cloud_page.js";
+        let root_container = document.getElementById('cloud_container');
+        let app = new CloudPage(root_container);
+    </script>
 
 {% endblock %}
