--- a/website/templates/new_post_page.html
+++ b/website/templates/new_post_page.html
@@ -11,16 +11,11 @@
 
 
 {% block content %}
-    <div id="posts_editor_container"></div>
+    <div id="drafts_editor_container"></div>
 {% endblock %}
 
 
 {% block js %}
-
-    <!-- Showdown -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.6/showdown.min.js"
-            integrity="sha256-dwhppIrxD8qC6lNulndZgtIm4XBU9zoMd9OUoXzIDAE=" crossorigin="anonymous"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@calumk/editorjs-columns@latest"></script>
@@ -40,7 +35,7 @@
 
     <script type="module">
         import {DraftsEditorPage} from "../static/posts/js/drafts_editor_page.js";
-        let root_container = document.getElementById('posts_editor_container');
+        let root_container = document.getElementById('drafts_editor_container');
         let app = new DraftsEditorPage(root_container);
     </script>
 
