--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -12,29 +12,13 @@
     {% include 'tags/yandex_webmaster.html' %}
     {% include 'tags/google_analytics.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!-- Semantic UI -->
     <link href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css" rel="stylesheet">
 
-    <!-- Bootstrap theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Font Awesome -- icon font pack -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700|Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic">
 
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
-
-    <!-- Semantic UI alerts -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/ui-alerts.css' %}">
-
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700|Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic">
 
     <link rel="icon" href="{% static 'img/favicon.png' %}">
 
@@ -51,9 +35,8 @@
 
 {% include 'main_navbar.html' %}
 
-<div class="content-block main">
-    {% block content %}
-    {% endblock %}
+<div id="app">
+    {% block content %}{% endblock %}
 </div>
 
 
@@ -67,11 +50,6 @@
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
 
-<!-- Bootstrap JS -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-
 <!-- Semantic UI -->
 <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
 
@@ -80,7 +58,6 @@
 
 <!-- Global methods -->
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/ui-alerts.js' %}"></script>
 
 {% block js %}
 {% endblock %}
