--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700|Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic">
 
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
     <link rel="icon" href="{% static 'img/favicon.png' %}">
 
@@ -33,7 +33,7 @@
 
 <body>
 
-{% include 'main_navbar.html' %}
+{% include 'navbar.html' %}
 
 <div id="app">
     {% block content %}{% endblock %}
