--- a/website/templates/moderation.html
+++ b/website/templates/moderation.html
@@ -5,11 +5,7 @@
     Moderation
 {% endblock %}
 
-{% block head %}
-
-    <link rel="stylesheet" href="{% static 'css/moderation.css' %}">
-
-{% endblock %}
+{% block head %}{% endblock %}
 
 
 {% block content %}
