--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -17,10 +17,10 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700|Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic">
 
-    <link rel="stylesheet" href="{% static 'css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/global.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/navbar.css' %}">
 
-    <link rel="icon" href="{% static 'img/favicon.png' %}">
+    <link rel="icon" href="{% static 'website/img/favicon.png' %}">
 
     <link rel="manifest" href="{% static 'pwa/manifest.json' %}">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -57,7 +57,7 @@
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
 
 <!-- Global methods -->
-<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+<script type="text/javascript" src="{% static 'website/js/main.js' %}"></script>
 
 {% block js %}
 {% endblock %}
