--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -4,9 +4,9 @@
 <div class="ui vertical link menu desktop navbar">
 
     <a class="item" href="{% url 'cloud' %}">
-        <img class="desktop-logo" src="{% static 'img/piLogo.png' %}" alt="PiCloud"
+        <img class="desktop-logo" src="{% static 'website/img/picloud-full.png' %}" alt="PiCloud"
             style="height: 50px; margin: -10px 10px">
-        <img class="mobile-logo" src="{% static 'img/favicon.png' %}" alt="PiCloud"
+        <img class="mobile-logo" src="{% static 'website/img/favicon.png' %}" alt="PiCloud"
             style="height: 30px; margin: 0 -2px 0 136px;">
     </a>
 
