--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,12 +9,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="{% static 'img/favicon.png' %}">
-    <link rel="icon" href="{% static 'img/favicon.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'website/img/favicon.png' %}">
+    <link rel="icon" href="{% static 'website/img/favicon.png' %}">
 
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/index.css' %}">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,500,500i,700,700i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+SC:400,500">
@@ -41,7 +39,7 @@
 <header>
     <div class="headline">
         <a class="logo" href="">
-            <img class="logo" src="{% static 'img/logo-white.png' %}"/>
+            <img class="logo" src="{% static 'website/img/picloud-full-white.png' %}"/>
         </a>
         <div class="buttons">
             <a class="button" href="{% url 'signin' %}">Вход</a>
