--- a/website/templates/posts.html
+++ b/website/templates/posts.html
@@ -5,26 +5,11 @@
     Post
 {% endblock %}
 
-{% block head %}
-
-    <link rel="stylesheet" href="{% static 'posts/css/post.css' %}">
-    <link rel="stylesheet" href="{% static 'posts/css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'posts/css/comments.css' %}">
-
-{% endblock %}
-
-
-{% block content %}
-    <div id="posts_container"></div>
-{% endblock %}
-
-
 {% block js %}
 
     <script type="module">
         import {PostPage} from "../../static/posts/js/post_page.js";
-        let root_container = document.getElementById('posts_container');
-        let app = new PostPage(root_container);
+        let app = new PostPage(document.getElementById('app'));
     </script>
 
 {% endblock %}
